# Vett

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  HOW_TO_RUN.txt  LICENSE  README.md  RELEASE_CHECKLIST.md  SECURITY.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish-pypi.yml
tests/: test_analyzer.py  test_scanner.py  test_utils.py
vett/: __init__.py  analyzer.py  cli.py  reporter.py  scanner.py  utils.py
