[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vett"
dynamic = ["version"]
description = "AI-powered codebase health scanner"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Vett contributors" }
]
dependencies = [
  "anthropic>=0.25.0",
  "click>=8.1.0",
  "rich>=13.0.0",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/madhavbuilds/Vett"
Repository = "https://github.com/madhavbuilds/Vett"

[project.scripts]
vett = "vett.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "vett.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["vett*"]
